--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,12 +2,11 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: info
+  - title: About me
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: "Hello! I am pursuing my PhD in <a href='https://ceat.okstate.edu/iem/'>Industrial Engineering and Management</a> at <a href='https://go.okstate.edu'>Oklahoma State University</a> advised by <a href='https://austinlbuchanan.github.io'>Dr. Austin Buchanan</a>."  
+      - title: My research interest is mainly on operation research, network optimization, community detection and among others. 
+      - title: You can contact me via xiaocong.zhen10@okstate.edu
 
   - title: all posts
     post_list:
