--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,6 +2,30 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
+  - title: About me
+    entries:
+      - title: "Hello! I am pursuing my PhD in <a href='https://ceat.okstate.edu/iem/'>Industrial Engineering and Management</a> at <a href='https://go.okstate.edu'>Oklahoma State University</a> advised by <a href='https://austinlbuchanan.github.io'>Dr. Austin Buchanan</a>"
+      - title: My research interest is mainly on operations research, network flow, community detection and among others
+      - title: "You can contact me via xiaocong.zhen10@okstate.edu as well as my Linkedin <a href='https://www.linkedin.com/in/xiaocong-zhen-18b1b128b/'>here</a>"
+
+  - title: Education
+    entries:
+      - title: Doctor of Philosiphy in Industrial Engineering and Management, Oklahoma State University, Stillwater, OK
+      - title: Mater of Science in Operations Research, Shandong University, China
+      - title: Bachelor of Science in Mathematics (Specilization: Mathematics Teacher Education), Shenyang Normal University, China
+  
+  - title: Publications
+    entries:
+      - title: Song, T.Z., Zhen, X.C., Gao, W. and Zhu, W., 2022. Identification of potential driving genes in prostatic cancer using complex network analysis. Computer Methods in Biomechanics and Biomedical Engineering: Imaging & Visualization, 10(6), pp.616-621.
+        url: https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2015722
+
+  - title: Contact me 
+    entries:
+      - title: Linkedin
+        url: https://www.linkedin.com/in/xiaocong-zhen-18b1b128b/
+      - title: Github
+        url: https://github.com/JessicaXiaocong/
+    
   - title: all posts
     post_list:
       limit: 5
