--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,13 +1,14 @@
 # For documentation on this file, see:
 # https://github.com/riggraz/no-style-please#customize-the-menu
-
 entries:
   - title: About me
     entries:
       - title: "Hello! I am pursuing my PhD in <a href='https://ceat.okstate.edu/iem/'>Industrial Engineering and Management</a> at <a href='https://go.okstate.edu'>Oklahoma State University</a> advised by <a href='https://austinlbuchanan.github.io'>Dr. Austin Buchanan</a>"
       - title: My research interest is mainly on operations research, network flow, community detection and among others
+        url: https://github.com/riggraz/no-style-please
       - title: "You can contact me via xiaocong.zhen10@okstate.edu as well as my Linkedin <a href='https://www.linkedin.com/in/xiaocong-zhen-18b1b128b/'>here</a>"
 
+      
   - title: Education
     entries:
       - title: Doctor of Philosiphy in Industrial Engineering and Management, Oklahoma State University, Stillwater, OK
