--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -8,7 +8,7 @@ entries:
       - title: "You can contact me via xiaocong.zhen10@okstate.edu as well as my Linkedin <a href='https://www.linkedin.com/in/xiaocong-zhen-18b1b128b/'>here</a>"
   - title: Education
     entries:
-      - title: Doctor of Philosiphy in Industrial Engineering and Management, Oklahoma State University, Stillwater, OK (ongoing)
+      - title: PhD in Industrial Engineering and Management, Oklahoma State University, Stillwater, OK (ongoing)
       - title: Mater of Science in Operations Research, Shandong University, China (2022)
       - title: Bachelor of Science in Mathematics (Specilization: Mathematics Teacher Education), Shenyang Normal University, China (2019)    
   - title: all posts
