--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,7 +13,7 @@ entries:
       - title: Bachelor of Science in Mathematics, Shenyang Normal University, China, 2019   
   - title: Publications
     entries:
-      - title: Song, T.Z., Zhen, X.C., Gao, W. and Zhu, W., 2022. Identification of potential driving genes in prostatic cancer using complex network analysis. Computer Methods in Biomechanics and Biomedical Engineering: Imaging & Visualization, 10(6), pp.616-621.
+      - title: Song, T.Z., Zhen, X.C., Gao, W. and Zhu, W., 2022. Identification of potential driving genes in prostatic cancer using complex network analysis. Computer Methods in Biomechanics and Biomedical Engineering: Imaging and Visualization, 10-6, pp.616-621.
   - title: all posts
     post_list:
       limit: 1
