--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,7 +13,7 @@ entries:
       - title: Bachelor of Science in Mathematics, Shenyang Normal University, China, 2019   
   - title: Publications
     entries:
-      - title: "<a href='https://doi.org/10.1080/21681163.2021.2015722'>Identification of potential driving genes in prostatic cancer using complex network analysis</a>
+      - title: "<a href='https://doi.org/10.1080/21681163.2021.2015722'>Identification of potential driving genes in prostatic cancer using complex network analysis</a>"
     
   - title: all posts
     post_list:
