--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,12 +15,11 @@ entries:
     entries:
       - title: "<a href='https://doi.org/10.1080/21681163.2021.2015722'>Identification of potential driving genes in prostatic cancer using complex network analysis</a>"
     
-  - title: all posts
-    post_list:
-      limit: 1
-      show_more: true
-      show_more_text: See archive...
-      show_more_url: archive.html
+  - title: Contact me
+    entries:
+      - title: "<a href='https://www.linkedin.com/in/xiaocong-zhen-18b1b128b/'>Linkedin</a>"
+      - title: "<a href='https://github.com/JessicaXiaocong'>Github</a>"
+      - title: xiaocong.zhen10@okstate.edu
 
 
     
