--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -20,6 +20,9 @@ entries:
       - title: "<a href='https://www.linkedin.com/in/xiaocong-zhen-18b1b128b/'>Linkedin</a>"
       - title: "<a href='https://github.com/JessicaXiaocong'>Github</a>"
       - title: xiaocong.zhen10@okstate.edu
+  - title: Links
+    entries:
+      - title: "<a href='https://www.mathgenealogy.org'>Mathematics Genealogy Project</a>"
 
 
     
